# DCS-Scripts

./: LICENSE  README.md
LuaDesanitizer/: .gitignore  Cargo.toml  config.json  testfile.lua
LuaDesanitizer/inno installer/: InnoSetup.iss
LuaDesanitizer/src/: configuration_reader.rs  dcs_directory_finder.rs  file_monitor.rs  lua_desanitizer.rs  main.rs
MarineTrafficGenerator/: MarineTrafficGenerator.lua  PG_Static.csv  readme.md
UnitDetector/: UnitDetector.lua
